# jaxloudnorm

./: .gitignore  README.md  pyproject.toml  requirements.txt
jaxloudnorm/: __init__.py  iirfilter.py  lfilter.py  meter.py  normalize.py  util.py
tests/: test_jit_benchmark.py  test_loudness.py
